setup linting and all that jazz

--- a/web/app/themes/mfa/style.css
+++ b/web/app/themes/mfa/style.css
@@ -1,10 +1,6 @@
 /*
- * Theme Name: My Timber 2.x Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Timber Team and You!
- */
-
-/* NOTE:
- * This file is reserved for the theme metadata and is not loaded.
- * Write styles in assets/styles/main.css instead.
+ * Theme Name: Marshall For All
+ * Description: This is our Marshall For All theme, built on the Timber starter theme.
+ * Version: 1.0.0
+ * Author: Christopher McComas
  */
